# millerbrainobservatory.github.io

./: .buildinfo  README.md  README.rst  environment.yml  genindex.html  glossary.html  index.html  objects.inv  pyproject.toml  ref.html  search.html  searchindex.js
.doctrees/: environment.pickle  glossary.doctree  index.doctree  ref.doctree
.doctrees/guides/: hpc.doctree  lbm_data.doctree  mbo_servers.doctree  venvs.doctree
.github/workflows/: build_and_deploy_docs.yml
_sources/: glossary.md  index.md  index.md.txt  index.rst  index.rst.txt  ref.md  ref.md.txt
_sources/dev/: index.rst  index.rst.txt
_sources/doc_guides/: deploy_docs.rst  index.rst
_sources/guides/: build_docs.rst  hpc.md  imagej.rst  index.rst  lbm_datasets.md.txt  mbo_servers.md  mbo_servers.md.txt  ref.md  scanimage.md  venvs.md
_sources/pipelines/: caiman_matlab.rst  caiman_python.rst  (+5 more)
_static/: custom.css
dev/: index.html
doc/: conf.py  index.rst  requirements.txt
doc_guides/: build_docs.html  deploy_docs.html  index.html  workflow_docs.html
docs/: conf.py  glossary.md  imported_code_example.m  imported_code_example.py  index.md  index.rst  make.bat  repositories.rst  requirements.txt
guides/: build_docs.html  hpc.html  imagej.html  index.html  lbm_data.html  lbm_datasets.html  mbo_servers.html  publication.html  ref.html  scanimage.html  venvs.html
pipelines/: caiman_matlab.html  caiman_python.html  index.html  repositories.html  scanreader.html
resources/: index.html
scripts/: benchmark_staging.ipynb  convert_tiff_to_volumetric_zarr.ipynb  inspect_zarr_metadata_cell.py
tools/: md_to_slack.py
user_guide/: adding_docs.html  build_docs.html  deploy_docs.html  index.html  workflow_docs.html
(+352 files in other folders)
