[project]
name = "millerbrainobservatory-github-io"
version = "0.1.0"
description = "Source code for MBO Hub"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["Microscopy", "ScanImage", "Suite2p", "tiff"]
urls = {homepage = "https://github.com/MillerBrainObservatory/millerbrainobservatory"}
classifiers=[
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Science/Research",
	"Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[dependency-groups]
docs = [
    "sphinx>=7.0,<8.2",
    "docutils>=0.19",
    "nbsphinx",
    "myst-nb>=1.0.0,<1.2",
    "ipykernel",
    "sphinx-gallery",
    "sphinx-togglebutton",
    "pydata-sphinx-theme",
    "sphinxcontrib-images",
    "sphinxcontrib-video",
    "numpydoc",
    "sphinx-book-theme",
    "myst-parser<4",
    "sphinx-copybutton",
    "sphinx-inline-tabs",
    "sphinx-design",
    "sphinx-tippy",
]

